# bkup

./: .editorconfig  .gitignore  .shellcheckrc  README.md  flake8.sh  lint.sh  test.sh  test_win_from_wsl.sh
.github/workflows/: python.yaml  rust.yaml  sh.yaml
client/: bkup.py  runaswin.py
client/commands/: __init__.py  archive.py  clean.py  cloudsetup.py  simpletoml.py  sync.py  upload.py  util.py
client/tests/: test_client.py
note/: client.md  robocopy_help.txt  schtasks_create_help.txt  server.md  technote.md
sample/: .gitignore  lint.sh  sample_win.sh  sample_wsl.sh  sample_wsl_schedule.sh
sample/client/: sample_win.sh  sample_wsl.sh  sample_wsl_schedule.sh
sample/server/: periodic.sh  setup.sh
scripts/: .gitignore  main_win.sh  main_wsl.sh  sample_win.sh  sample_wsl.sh
scripts/client/: main_win.sh  main_wsl.sh  sample_win.sh  sample_win_schedule.sh  sample_wsl.sh  sample_wsl_schedule.sh
scripts/server/: release_build.sh  setup.sh
server/: .gitignore  Cargo.toml  build.rs
server/src/: fssys.rs  lib.rs  main.rs  task.rs  version.rs
server/src/task/: inbox.rs  repo.rs  status.rs  sync.rs  watch.rs
src/commands/: __init__.py  archive.py  clean.py  cloud.py  cloudclean.py  cloudsetup.py  dockervol.py  sync.py  upload.py  util.py
src/tests/: test_client.py
