[package]
name = "bkupserver"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.92"
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
fern = { version = "0.7.0", features = ["colored"] }
libc = "0.2.161"
log = { version = "0.4.22", features = ["serde"] }
notify = "7.0.0"
number_prefix = "0.4.0"
regex = "1.11.1"
serde = { version = "1.0.214", features = ["derive"] }
toml = "0.8.19"

[dev-dependencies]
tempfile = "3.13.0"

[build-dependencies]
anyhow = "1.0.92"
