[package]
name = "bkupserver"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive"] }
fern = { version = "0.7.0", features = ["colored"] }
libc = "0.2.164"
log = { version = "0.4.22", features = ["serde"] }
notify = "7.0.0"
number_prefix = "0.4.0"
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"] }
tempfile = "3.14.0"
toml = "0.8.19"

[dev-dependencies]

[build-dependencies]
anyhow = "1.0.93"
